# python_call_rust

./: .gitignore  Cargo.toml  README.md  hello.py  justfile  pyproject.toml
src/: lib.rs
src/word_suffix/: __init__.py  _core.pyi
word_suffix/: __init__.py  demo.py
