[package]
name = "python_call_rust"
version = "0.1.0"
authors = ["linux_china <libing.chen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
