[project]
name = "python-call-rust"
version = "0.1.0"
description = "Python call Rust by PyO3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []


[tool.maturin]
module-name = "word_suffix._core"
python-packages = ["word_suffix"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin>=1.8.2",
    "pip>=25.0",
    "setuptools>=75.6.0",
]

[project.scripts]
word-suffix = "word_suffix:main"
